--- a/3-Software-and-Workflow/SoftwareWorkflow.tex
+++ b/3-Software-and-Workflow/SoftwareWorkflow.tex
@@ -60,10 +60,10 @@
 % - Use the \inst{?} command only if the authors have different
 %   affiliation.
 
-\institute[UC Berkeley, Berkely Initiatiative for Transparency in the Social Sciences] % (optional, but mostly needed)
+\institute[UC Berkeley, Berkeley Initiatiative for Transparency in the Social Sciences] % (optional, but mostly needed)
 {
   \inst{1}%
-  UC Berkeley: Berkely Initiatiative for Transparency in the Social Sciences\\
+  UC Berkeley: Berkeley Initiative for Transparency in the Social Sciences\\
   Berkeley Institute for Data Science
 }
 % - Use the \inst command only if there are several affiliations.
