--- a/4-DataSharing-and-Rep/Data-and-Replication.tex
+++ b/4-DataSharing-and-Rep/Data-and-Replication.tex
@@ -50,7 +50,7 @@
 % does not look nice, try deleting the line with the fontenc.
 
 
-\title[Short Paper Title] % (optional, use only with long paper titles)
+\title[Data Sharing and Replication] % (optional, use only with long paper titles)
 {Data Sharing and Replication}
 
 \subtitle
@@ -61,10 +61,10 @@
 % - Use the \inst{?} command only if the authors have different
 %   affiliation.
 
-\institute[UC Berkeley, Berkely Initiatiative for Transparency in the Social Sciences] % (optional, but mostly needed)
+\institute[UC Berkeley, Berkeley Initiative for Transparency in the Social Sciences] % (optional, but mostly needed)
 {
   \inst{1}%
-  UC Berkeley: Berkely Initiatiative for Transparency in the Social Sciences\\
+  UC Berkeley: Berkeley Initiative for Transparency in the Social Sciences\\
   Berkeley Institute for Data Science
 }
 % - Use the \inst command only if there are several affiliations.
