I made one very minor change for demo purposes.

--- a/3-Software-and-Workflow/SoftwareWorkflow.tex
+++ b/3-Software-and-Workflow/SoftwareWorkflow.tex
@@ -185,7 +185,7 @@
 	\item \href{http://www.newyorker.com/news/john-cassidy/the-reinhart-and-rogoff-controversy-a-summing-up}{\textit{New Yorker} summary}.
 \end{itemize}
 
-\item Random number generation in Excel: set seed with \href{http://www.statisticshowto.com/use-random-number-generator-excel/}{Data Analysis Toolpak}. 
+\item Random number generation in Excel--set seed with \href{http://www.statisticshowto.com/use-random-number-generator-excel/}{Data Analysis Toolpak}. 
 \end{itemize}
 \end{frame}
 
